Partial_14Dec2021/force-app/main/default/objects/Question_Response__c/fields/Compare_User_choice__c.field-meta.xml
<CustomField>
    <fullName>Compare_User_choice__c</fullName>
    <formula>IF(User_Answer__c==  TEXT(Question__r.Currect_Answer__c) , &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compare User choice</label>
    <type>Text</type>
</CustomField>