Partial_14Dec2021/force-app/main/default/objects/Question_Response__c/fields/Quiz_Month__c.field-meta.xml
<CustomField>
    <fullName>Quiz_Month__c</fullName>
    <label>Quiz Month</label>
    <length>50</length>
    <type>Text</type>
</CustomField>