Partial_14Dec2021/force-app/main/default/objects/Question_Response__c/fields/Response_Month__c.field-meta.xml
<CustomField>
    <fullName>Response_Month__c</fullName>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Response Month</label>
    <type>Date</type>
</CustomField>