Partial_14Dec2021/force-app/main/default/objects/Question_Response__c/fields/User_Answer__c.field-meta.xml
<CustomField>
    <fullName>User_Answer__c</fullName>
    <label>User Answer</label>
    <type>TextArea</type>
</CustomField>